src/tests/data/SemanticErrors/SubscriptNotArray.c

#include <stdio.h>

int main()
{
    int a;
    a[0] = 0;   // ERROR

	return 0;
}